// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ListDivided > should render an empty list divided 1`] = `
<DocumentFragment>
  <span
    data-testid="list-divided__empty"
  >
    empty
  </span>
</DocumentFragment>
`;

exports[`ListDivided > should render an list divided with lastBorder = false 1`] = `
<DocumentFragment>
  <ul
    class="[&>li]:border-theme-secondary-300 dark:[&>li]:border-theme-secondary-800 [&>li]:mb-6 [&>li]:border-b [&>li]:border-dashed [&>li]:pb-6"
    data-testid="list-divided__items"
  >
    <li
      class="flex flex-col w-full"
      data-testid="list-divided-item__wrapper"
    >
      <div
        class="flex flex-col justify-between items-start"
        data-testid="list-divided-item__inner-wrapper"
      >
        <div
          class="flex flex-col space-y-2 w-full"
        >
          <div
            class="flex justify-between items-center space-x-5"
          >
            <span
              class="font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
              data-testid="list-divided-item__label"
            >
              New Profile
            </span>
          </div>
          <span
            class="text-sm font-medium text-theme-secondary-700 dark:text-theme-dark-200"
            data-testid="list-divided-item__label--description"
          >
            Select Profile Image
          </span>
        </div>
      </div>
      <div
        class=""
        data-testid="list-divided-item__content"
      >
        <div
          class="flex flex-row mt-2"
        >
          <div
            class="flex justify-center items-center mr-6 w-24 h-24 rounded border-2 border-dashed border-theme-secondary-500"
          />
          <div
            class="relative w-24 h-24 rounded bg-theme-secondary-500"
          >
            <img
              alt="random avatar"
              class="object-cover rounded"
              src="https://randomuser.me/api/portraits/men/3.jpg"
            />
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ListDivided > should render an list divided with lastBorder = true 1`] = `
<DocumentFragment>
  <ul
    class="[&>li]:border-theme-secondary-300 dark:[&>li]:border-theme-secondary-800 [&>li]:mb-6 [&>li]:border-b [&>li]:border-dashed [&>li]:pb-6 [&>li:last-child]:mb-0 [&>li:last-child]:border-b-0 [&>li:last-child]:pb-0"
    data-testid="list-divided__items"
  >
    <li
      class="flex flex-col w-full"
      data-testid="list-divided-item__wrapper"
    >
      <div
        class="flex flex-col justify-between items-start"
        data-testid="list-divided-item__inner-wrapper"
      >
        <div
          class="flex flex-col space-y-2 w-full"
        >
          <div
            class="flex justify-between items-center space-x-5"
          >
            <span
              class="font-semibold text-theme-secondary-700 dark:text-theme-dark-200"
              data-testid="list-divided-item__label"
            >
              New Profile
            </span>
          </div>
          <span
            class="text-sm font-medium text-theme-secondary-700 dark:text-theme-dark-200"
            data-testid="list-divided-item__label--description"
          >
            Select Profile Image
          </span>
        </div>
      </div>
      <div
        class=""
        data-testid="list-divided-item__content"
      >
        <div
          class="flex flex-row mt-2"
        >
          <div
            class="flex justify-center items-center mr-6 w-24 h-24 rounded border-2 border-dashed border-theme-secondary-500"
          />
          <div
            class="relative w-24 h-24 rounded bg-theme-secondary-500"
          >
            <img
              alt="random avatar"
              class="object-cover rounded"
              src="https://randomuser.me/api/portraits/men/3.jpg"
            />
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
